horizontal scrollbar fixed

--- a/assets/css/restaurants-menu.css
+++ b/assets/css/restaurants-menu.css
@@ -186,11 +186,6 @@ h3, h4, h5, h6 {
             margin-right: -80px;
         }
     }
-    input[type="checkbox"]:not(:checked) + label:hover .save-icon-container {
-        margin-right: -10px;
-        background-color: var(--tertiary-color);
-        opacity: 0.35;
-    }
     .save-icon-checkbox {
         display: none;
     }
@@ -264,7 +259,7 @@ h3, h4, h5, h6 {
     }
 
     .restaurants-menu-container {
-        width: 1055px;
+        max-width: 1055px;
     }
 
     .menu-elements-container {
@@ -278,5 +273,11 @@ h3, h4, h5, h6 {
         & .dish-title {
             width: 634px;
         }
+    }
+
+    input[type="checkbox"]:not(:checked) + label:hover .save-icon-container {
+        margin-right: -10px;
+        background-color: var(--tertiary-color);
+        opacity: 0.35;
     }
 }
